# footasie

./: README.md
cpp/: CMakeLists.txt
cpp/data/: config.ini  f_creneau.csv  f_creneau_championnat.csv  f_creneau_genere.csv  f_equipe.csv  f_match.csv  f_match_entree.csv
cpp/exe/: createChampionnat.cpp  createCoupe.cpp  createCreneau.cpp  createMatch.cpp  createMatchCoupe.cpp  createMatchLigue.cpp  rondeSuisse.cpp  updateInscrits.cpp
cpp/src/: Creneau.cpp  Creneau.hpp  Date.cpp  Date.hpp  Equipe.cpp  Equipe.hpp  Inscrit.cpp  Inscrit.hpp  Joueur.cpp  Joueur.hpp  Ligue.cpp  Ligue.hpp  Match.cpp  Match.hpp  Poule.cpp  Poule.hpp  getConfig.cpp  getConfig.hpp  global.hpp  melange.hpp
front/footasie/: package-lock.json  package.json
front/footasie/public/: index.html
front/footasie/src/: App.css  App.js
front/footasie/src/components/calendar/: CustomCalendar.js
front/footasie/src/components/header/: AppHeader.css  AppHeader.js
php/: .gitignore  .htaccess  auth.php  bdd.php  code.php  envoi_ics.php  function.php  index.php  login.php  logout.php  mail.php  reponse.php
php/cron/: .htaccess  bdd.php  footRappelMatch.php  footRelance.php  footReportAttente.php  footTest.php
php/css/: style.css
php/documents/: 2024.txt
php/img/: Thumbs.db
php/img/souvenirs/: 2024.html  style.css
php/js/: ajax.js  function.js
php/templates/: .htaccess  accueil.php  accueil.php-old  addJoueur.php  ajoutMatch.php  bandeau-old.php  bandeau.php  calendrier.php  calendrierGeneral.php  calendrier_ratio.php  ch_equipe.php  convJoueurs.php  coupe.php  coupeF.php  demCreneau.php  demForfait.php  detailMatch.php  dispoJoueurs.php  envoiMail.php  equipe.php  equipe_ratio.php  gestionEquipe.php  htpasswd.txt  identification.php  info.php  infoEquipe.php  infoJoueur.php  infoSociete.php  inscription.php  inscription_off.php  listeMatchs.php  mdp.php  modifStatut.php  reglement.php  stade.php  stats.php  supprCom.php  test.php  valid_inscription.php
php/templates/admin/: ajoutMatch.php  annule.php  demReport.php  envScore.php  majScore.php  modifArb.php  relance.php  repAccept.php  repRefus.php  report.php
